--- a/views/modules/search.ejs
+++ b/views/modules/search.ejs
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <div class="container" id="container">
+        <!-- <% if (typeof successMessage != 'undefined' && successMessage) { %>
+            <div class="alert alert-success">
+                <%- successMessage %>
+            </div>
+            <% } else if (typeof errorMessage != 'undefined' && errorMessage) { %>
+            <div class="alert alert-danger">
+                <%- errorMessage %>
+            </div>
+            <% } %> -->
     <form>
         <div class="row">
             <div class="col-md-4">
@@ -8,97 +17,110 @@
                     <h5>Afhentnings</h5><br>
                 </div>
                 <div class=col-4>
-                    </div>
-                   <div class=col-4></div> 
-                <div class=col-2>
-                    <input type="text" id="Pickup_Country" name="Pickup_Country" class="inputStyle" placeholder="Landkode">
                 </div>
-                 <br>
+                <div class=col-4></div>
                 <div class=col-2>
-                    <input type="text" id="Pickup_Country" name="Pickup_Country" class="inputStyle" placeholder="Postnummer">
+                    <input type="text" id="Pickup_Country" name="Pickup_Country" class="inputStyle"
+                        placeholder="Landkode">
+                </div>
+                <br>
+                <div class=col-2>
+                    <input type="text" id="Pickup_Country" name="Pickup_Country" class="inputStyle"
+                        placeholder="Postnummer">
                 </div>
                 <div class=col-2>
-                        <label>Dato</label>
-                    </div>
-                    <div class=col-2>
-                        <input type="date" id="Pickup_date" name="Pickup_date" class="inputStyle">
-                    </div>
-                    <div class=col-2>
-                        <label width=>Tidsinterval</label>
-                    </div>
-                    <div class=col-2>
-                        <label>Fra</label><input type="time" id="Pickup_Start_Time" name="Pickup_Start_Time" class="inputStyle">
-                        <label>Til</label><input type="time" id="Pickup_End_Time" name="Pickup_End_Time" class="inputStyle">
-                    </div>
+                    <label>Dato</label>
+                </div>
+                <div class=col-2>
+                    <input type="date" id="Pickup_date" name="Pickup_date" class="inputStyle">
+                </div>
+                <div class=col-2>
+                    <label width=>Tidsinterval</label>
+                </div>
+                <div class=col-2>
+                    <label>Fra</label><input type="time" id="Pickup_Start_Time" name="Pickup_Start_Time"
+                        class="inputStyle">
+                    <label>Til</label><input type="time" id="Pickup_End_Time" name="Pickup_End_Time" class="inputStyle">
+                </div>
             </div>
             <div class="col-md-4">
-                    <div class=col-6>
-                        <h5>Levering</h5><br>
-                    </div>
-                    <div class=col-4>
-                        </div>
-                       <div class=col-4></div> 
-                    <div class=col-2>
-                        <input type="text" id="Pickup_Country" name="Pickup_Country" class="inputStyle" placeholder="Landkode">
-                    </div>
-                     <br>
-                    <div class=col-2>
-                        <input type="text" id="Pickup_Country" name="Pickup_Country" class="inputStyle" placeholder="Postnummer">
-                    </div>
-                    <div class=col-2>
-                            <label>Dato</label>
-                        </div>
-                        <div class=col-2>
-                            <input type="date" id="Pickup_date" name="Pickup_date" class="inputStyle">
-                        </div>
-                        <div class=col-2>
-                            <label width=>Tidsinterval</label>
-                        </div>
-                        <div class=col-4>
-                            <label>Fra</label><input type="time" id="Pickup_Start_Time" name="Pickup_Start_Time" class="inputStyle">
-                            <label>Til</label><input type="time" id="Pickup_End_Time" name="Pickup_End_Time" class="inputStyle">
-                        </div>
+                <div class=col-6>
+                    <h5>Levering</h5><br>
                 </div>
+                <div class=col-4>
+                </div>
+                <div class=col-4></div>
+                <div class=col-2>
+                    <input type="text" id="Pickup_Country" name="Pickup_Country" class="inputStyle"
+                        placeholder="Landkode">
+                </div>
+                <br>
+                <div class=col-2>
+                    <input type="text" id="Pickup_Country" name="Pickup_Country" class="inputStyle"
+                        placeholder="Postnummer">
+                </div>
+                <div class=col-2>
+                    <label>Dato</label>
+                </div>
+                <div class=col-2>
+                    <input type="date" id="Pickup_date" name="Pickup_date" class="inputStyle">
+                </div>
+                <div class=col-2>
+                    <label width=>Tidsinterval</label>
+                </div>
+                <div class=col-4>
+                    <label>Fra</label><input type="time" id="Pickup_Start_Time" name="Pickup_Start_Time"
+                        class="inputStyle">
+                    <label>Til</label><input type="time" id="Pickup_End_Time" name="Pickup_End_Time" class="inputStyle">
+                </div>
+            </div>
 
             <div class="col-md-4">
-                    <div class=col->
-                            <h5>Gods</h5><br>
-                        </div>
+                <div class=col->
+                    <h5>Gods</h5><br>
+                </div>
                 <div class=col->
                     <input type="text" id="Loading_meters" name="Loading_meters" placeholder="Ladmeter"
-                    class="inputStyle">
+                        class="inputStyle">
                 </div>
                 <br>
                 <div class=col->
-                        <label>Transporttype</label>
-                        <br>
-                        <select id="TransportTypeList">
-                                <option value="1">Vej</option>
-                                <option value="2">Skib</option>
-                                <option value="3">Fly</option>
-                            </select>
+                    <label>Transporttype</label>
+                    <br>
+                    <select id="TransportTypeList">
+                        <option value="1">Vej</option>
+                        <option value="2">Skib</option>
+                        <option value="3">Fly</option>
+                    </select>
                 </div>
                 <div class=col->
-                        <br>
-                        <label>Specielle</label>
-                        <br>
-                        <input type="radio" class="inputStyle" name="Special_Requirements" value="Box_Trailer" checked> Box trailer<br>
-                        <input type="radio" class="inputStyle" name="Special_Requirements" value="Colding_Trailer"> Køletrailer<br>
-                        <input type="radio" class="inputStyle" name="Special_Requirements" value="xx"> Other
+                    <br>
+                    <label>Specielle</label>
+                    <br>
+                    <input type="radio" class="inputStyle" name="Special_Requirements" value="Box_Trailer" checked> Box
+                    trailer<br>
+                    <input type="radio" class="inputStyle" name="Special_Requirements" value="Colding_Trailer">
+                    Køletrailer<br>
+                    <input type="radio" class="inputStyle" name="Special_Requirements" value="xx"> Other
                 </div>
 
             </div>
-    
+
         </div>
 
-        <button class="customBtn" id="searchbtn">Søg</button>
+
 
     </form>
     <div class="row">
+        <div class="col-md-10"></div>
+        <button class="customBtn" id="searchbtn">Søg</button>
+    </div>
+    <br>
+    <div class="row">
         <% if (foundJobs) { %>
-        <table class='leepwaytable table'id='resulttable'>
-            
-        </table >
+        <table class='leepwaytable table' id='resulttable'>
+
+        </table>
         <% } else { %>
         <label>Indtast søgeparametre</label>
         <% } %>
