--- a/views/modules/bid.ejs
+++ b/views/modules/bid.ejs
@@ -39,7 +39,7 @@
                 <p>Detaljer om buddet</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="customBtn">Acceptér</button>
+                <button type="button" class="customBtn" id="acceptBidBtn">Acceptér</button>
                 <button type="button" class="customBtn" data-dismiss="modal">Afvis</button>
             </div>
         </div>
