--- a/views/modules/createOrder.ejs
+++ b/views/modules/createOrder.ejs
@@ -1,12 +1,12 @@
-<div class="container">
+<div class="container marginTop">
     <form id="createOrder">
-        <div class="row">
+        <div id="row1" class="row customRow activeRow">
             <div class="col-md-4">
                 <h5>Afhentning</label><br>
             </div>
             <div class=col-md-2>
                 <label>Land</label><br>
-                </div>
+            </div>
             <div class="col-md-6">
             </div>
             <div class="col-md-2">
@@ -23,99 +23,104 @@
                 </select>
             </div>
             <div class=col-md-2>
-                <input type="text" class="inputStyle" id="Pickup_Pickup_Country" name="Pickup_Pickup_Country" placeholder="Postnummer">
+                <input type="text" class="inputStyle" id="Pickup_Pickup_Country" name="Pickup_Pickup_Country"
+                    placeholder="Postnummer">
             </div>
-        
+
         </div>
-        <div class="row">
-                <div class="col-md-2">
-                    <label>Dato</label>
-                    <br>
-                    <input type="date" class="inputStyle" id="Pickup_date" name="Pickup_date">
-                </div>
-                <div class="col-md-2">
-                    <label>Fra tidspunkt</label>
-                    <br>
-                    <input type="time" class="inputStyle" id="Pickup_Start_Time" name="Pickup_Start_Time">
-                </div>
-                <div class="col-md-2">
-                    <label>Til tidspunkt</label>
-                    <br>
-                    <input type="time" class="inputStyle" id="Pickup_End_Time" name="Pickup_End_Time">
-                </div>
-            </div>
-
-
-            <div class="row">
-                    <div class="col-md-4">
-                        <h5>Levering</label><br>
-                    </div>
-                    <div class=col-md-2>
-                        <label>Land</label><br>
-                        </div>
-                    <div class="col-md-6">
-                    </div>
-                    <div class="col-md-2">
-                        <input type="text" class="inputStyle" id="Pickup_Company" name="Pickup_Company" placeholder="Firma">
-                    </div>
-                    <div class=col-md-2>
-                        <input type="text" class="inputStyle" id="Pickup_Adress" name="Pickup_Adress" placeholder="Adresse">
-                    </div>
-                    <div class=col-md-2>
-                        <select id="Pickup_TransportTypeList">
-                            <option value="1">DK</option>
-                            <option value="2">GB</option>
-                            <option value="3">Other</option>
-                        </select>
-                    </div>
-                    <div class=col-md-2>
-                        <input type="text" class="inputStyle" id="Pickup_Pickup_Country" name="Pickup_Pickup_Country" placeholder="Postnummer">
-                    </div>
-                
-                </div>
-                <div class="row">
-                        <div class="col-md-2">
-                            <label>Dato</label>
-                            <br>
-                            <input type="date" class="inputStyle" id="Pickup_date" name="Pickup_date">
-                        </div>
-                        <div class="col-md-2">
-                            <label>Fra tidspunkt</label>
-                            <br>
-                            <input type="time" class="inputStyle" id="Pickup_Start_Time" name="Pickup_Start_Time">
-                        </div>
-                        <div class="col-md-2">
-                            <label>Til tidspunkt</label>
-                            <br>
-                            <input type="time" class="inputStyle" id="Pickup_End_Time" name="Pickup_End_Time">
-                        </div>
-                    </div>
-        <div class="row">
-                <div class="col-md-12">
-                        <h5>Gods</label><br>
-                    </div>
+        <div id="row2" class="row customRow ghostRow">
             <div class="col-md-2">
-                <input type="text" class="inputStyle" id="Number_Paller" name="Number_Paller" placeholder="Antal paller">
+                <label>Dato</label>
+                <br>
+                <input type="date" class="inputStyle" id="Pickup_date" name="Pickup_date">
             </div>
             <div class="col-md-2">
-                <input type="text" class="inputStyle" id="Size_paller" name="Size_Paller" placeholder="Størrelse på paller">
+                <label>Fra tidspunkt</label>
+                <br>
+                <input type="time" class="inputStyle" id="Pickup_Start_Time" name="Pickup_Start_Time">
             </div>
-
             <div class="col-md-2">
-                    <input type="number" class="inputStyle" id="height_Paller" name="height_Paller" placeholder="Palles højde">
-                </div>
-
-                <div class="col-md-2">
-                        <input type="number" class="inputStyle" id="length_Paller" name="length_Paller" placeholder="Palles højde">
-                    </div>
-
-                    <div class="col-md-2">
-                            <input type="number" class="inputStyle" id="width_Paller" name="width_Paller" placeholder="Palles dybde">
-                        </div>
+                <label>Til tidspunkt</label>
+                <br>
+                <input type="time" class="inputStyle" id="Pickup_End_Time" name="Pickup_End_Time">
+            </div>
         </div>
-        <div class="row">
+        <div id="row3" class="row customRow ghostRow">
+            <div class="col-md-4">
+                <h5>Levering</label><br>
+            </div>
+            <div class=col-md-2>
+                <label>Land</label><br>
+            </div>
+            <div class="col-md-6">
+            </div>
+            <div class="col-md-2">
+                <input type="text" class="inputStyle" id="Pickup_Company" name="Pickup_Company" placeholder="Firma">
+            </div>
+            <div class=col-md-2>
+                <input type="text" class="inputStyle" id="Pickup_Adress" name="Pickup_Adress" placeholder="Adresse">
+            </div>
+            <div class=col-md-2>
+                <select id="Pickup_TransportTypeList">
+                    <option value="1">DK</option>
+                    <option value="2">GB</option>
+                    <option value="3">Other</option>
+                </select>
+            </div>
+            <div class=col-md-2>
+                <input type="text" class="inputStyle" id="Pickup_Pickup_Country" name="Pickup_Pickup_Country"
+                    placeholder="Postnummer">
+            </div>
+
+        </div>
+        <div id="row4" class="row customRow ghostRow">
+            <div class="col-md-2">
+                <label>Dato</label>
+                <br>
+                <input type="date" class="inputStyle" id="Pickup_date" name="Pickup_date">
+            </div>
+            <div class="col-md-2">
+                <label>Fra tidspunkt</label>
+                <br>
+                <input type="time" class="inputStyle" id="Pickup_Start_Time" name="Pickup_Start_Time">
+            </div>
+            <div class="col-md-2">
+                <label>Til tidspunkt</label>
+                <br>
+                <input type="time" class="inputStyle" id="Pickup_End_Time" name="Pickup_End_Time">
+            </div>
+        </div>
+        <div id="row5" class="row customRow ghostRow">
             <div class="col-md-12">
-                    <h5>Sidst frist for bud</label><br>
+                <h5>Gods</label><br>
+            </div>
+            <div class="col-md-2">
+                <input type="text" class="inputStyle" id="Number_Paller" name="Number_Paller"
+                    placeholder="Antal paller">
+            </div>
+            <div class="col-md-2">
+                <input type="text" class="inputStyle" id="Size_paller" name="Size_Paller"
+                    placeholder="Størrelse på paller">
+            </div>
+
+            <div class="col-md-2">
+                <input type="number" class="inputStyle" id="height_Paller" name="height_Paller"
+                    placeholder="Palles højde">
+            </div>
+
+            <div class="col-md-2">
+                <input type="number" class="inputStyle" id="length_Paller" name="length_Paller"
+                    placeholder="Palles højde">
+            </div>
+
+            <div class="col-md-2">
+                <input type="number" class="inputStyle" id="width_Paller" name="width_Paller"
+                    placeholder="Palles dybde">
+            </div>
+        </div>
+        <div id="row6" class="row customRow ghostRow">
+            <div class="col-md-12">
+                <h5>Sidst frist for bud</label><br>
             </div>
             <div class="col-md-2">
                 <label>Dato</label>
@@ -134,35 +139,37 @@
             </div>
             <div class="col-md-2">
                 <br>
-                    <input type="text" class="inputStyle" id="Reference_Number" name="Reference_Number" placeholder="Reference nummer">
-                </div>
+                <input type="text" class="inputStyle" id="Reference_Number" name="Reference_Number"
+                    placeholder="Reference nummer">
+            </div>
         </div>
-        <div class="row">
+        <div id="row7" class="row customRow ghostRow">
             <div class="col-md-2">
                 <label>Specielle krav</label><br>
             </div>
             <div class="col-md-2">
-                    <label>Transporttype</label>
-                </div>
-                <div class="col-md-8"></div>
+                <label>Transporttype</label>
+            </div>
+            <div class="col-md-8"></div>
             <div class="col-md-2">
                 <input type="radio" name="Special_Requirements" value="Box_Trailer" checked> Box trailer<br>
                 <input type="radio" name="Special_Requirements" value="Colding_Trailer"> Køletrailer<br>
                 <input type="radio" name="Special_Requirements" value="xx"> Other
             </div>
-                <div class="col-md-2">
-                    <select id="TransportTypeList">
-                        <option value="1">Vej</option>
-                        <option value="2">Skib</option>
-                        <option value="3">Fly</option>
-                    </select>
-                </div>
-                <div class="col-md-2">
-                        <textarea name="coment" form="createOrder" rows="6" cols="50" class="inputStyle">Skriv en kommentar her</textarea>
-                </div>
+            <div class="col-md-2">
+                <select id="TransportTypeList">
+                    <option value="1">Vej</option>
+                    <option value="2">Skib</option>
+                    <option value="3">Fly</option>
+                </select>
+            </div>
+            <div class="col-md-6">
+                <textarea name="coment" form="createOrder" rows="2" cols="50"
+                    class="inputStyle">Skriv en kommentar her</textarea>
+            </div>
 
         </div>
-        <input type="submit" value="Submit">
+        <input type="submit" value="Submit" class="customBtn">
 
     </form>
 </div>
