--- a/views/modules/search.ejs
+++ b/views/modules/search.ejs
@@ -20,27 +20,27 @@
                 </div>
                 <div class=col-4></div>
                 <div class=col-2>
-                    <input type="text" id="Pickup_Country" name="Pickup_Country" class="inputStyle"
+                    <input type="text" id="Pickup_Country" name="Pickup_Country" class="inputStyleSearch"
                         placeholder="Landkode">
                 </div>
                 <br>
                 <div class=col-2>
-                    <input type="text" id="Pickup_Country" name="Pickup_Country" class="inputStyle"
+                    <input type="text" id="Pickup_Country" name="Pickup_Country" class="inputStyleSearch"
                         placeholder="Postnummer">
                 </div>
                 <div class=col-2>
                     <label>Dato</label>
                 </div>
                 <div class=col-2>
-                    <input type="date" id="Pickup_date" name="Pickup_date" class="inputStyle">
+                    <input type="date" id="Pickup_date" name="Pickup_date" class="inputStyleSearch">
                 </div>
                 <div class=col-2>
                     <label width=>Tidsinterval</label>
                 </div>
                 <div class=col-2>
                     <label>Fra</label><input type="time" id="Pickup_Start_Time" name="Pickup_Start_Time"
-                        class="inputStyle">
-                    <label>Til</label><input type="time" id="Pickup_End_Time" name="Pickup_End_Time" class="inputStyle">
+                        class="inputStyleSearch">
+                    <label>Til</label><input type="time" id="Pickup_End_Time" name="Pickup_End_Time" class="inputStyleSearch">
                 </div>
             </div>
             <div class="col-md-4">
@@ -51,27 +51,27 @@
                 </div>
                 <div class=col-4></div>
                 <div class=col-2>
-                    <input type="text" id="Pickup_Country" name="Pickup_Country" class="inputStyle"
+                    <input type="text" id="Pickup_Country" name="Pickup_Country" class="inputStyleSearch"
                         placeholder="Landkode">
                 </div>
                 <br>
                 <div class=col-2>
-                    <input type="text" id="Pickup_Country" name="Pickup_Country" class="inputStyle"
+                    <input type="text" id="Pickup_Country" name="Pickup_Country" class="inputStyleSearch"
                         placeholder="Postnummer">
                 </div>
                 <div class=col-2>
                     <label>Dato</label>
                 </div>
                 <div class=col-2>
-                    <input type="date" id="Pickup_date" name="Pickup_date" class="inputStyle">
+                    <input type="date" id="Pickup_date" name="Pickup_date" class="inputStyleSearch">
                 </div>
                 <div class=col-2>
                     <label width=>Tidsinterval</label>
                 </div>
                 <div class=col-4>
                     <label>Fra</label><input type="time" id="Pickup_Start_Time" name="Pickup_Start_Time"
-                        class="inputStyle">
-                    <label>Til</label><input type="time" id="Pickup_End_Time" name="Pickup_End_Time" class="inputStyle">
+                        class="inputStyleSearch">
+                    <label>Til</label><input type="time" id="Pickup_End_Time" name="Pickup_End_Time" class="inputStyleSearch">
                 </div>
             </div>
 
@@ -81,7 +81,7 @@
                 </div>
                 <div class=col->
                     <input type="text" id="Loading_meters" name="Loading_meters" placeholder="Ladmeter"
-                        class="inputStyle">
+                        class="inputStyleSearch">
                 </div>
                 <br>
                 <div class=col->
@@ -97,11 +97,11 @@
                     <br>
                     <label>Specielle</label>
                     <br>
-                    <input type="radio" class="inputStyle" name="Special_Requirements" value="Box_Trailer" checked> Box
+                    <input type="radio" class="inputStyleSearch" name="Special_Requirements" value="Box_Trailer" checked> Box
                     trailer<br>
-                    <input type="radio" class="inputStyle" name="Special_Requirements" value="Colding_Trailer">
+                    <input type="radio" class="inputStyleSearch" name="Special_Requirements" value="Colding_Trailer">
                     Køletrailer<br>
-                    <input type="radio" class="inputStyle" name="Special_Requirements" value="xx"> Other
+                    <input type="radio" class="inputStyleSearch" name="Special_Requirements" value="xx"> Other
                 </div>
 
             </div>
