--- a/views/modules/createOrder.ejs
+++ b/views/modules/createOrder.ejs
@@ -10,10 +10,10 @@
             <div class="col-md-6">
             </div>
             <div class="col-md-2">
-                <input type="text" class="inputStyle" id="Pickup_Company" name="Pickup_Company" placeholder="Firma">
+                <input type="text" class="inputStyleCreateOrder" id="Pickup_Company" name="Pickup_Company" placeholder="Firma">
             </div>
             <div class=col-md-2>
-                <input type="text" class="inputStyle" id="Pickup_Adress" name="Pickup_Adress" placeholder="Adresse">
+                <input type="text" class="inputStyleCreateOrder" id="Pickup_Adress" name="Pickup_Adress" placeholder="Adresse">
             </div>
             <div class=col-md-2>
                 <select id="Pickup_TransportTypeList">
@@ -23,7 +23,7 @@
                 </select>
             </div>
             <div class=col-md-2>
-                <input type="text" class="inputStyle" id="Pickup_Pickup_Country" name="Pickup_Pickup_Country"
+                <input type="text" class="inputStyleCreateOrder" id="Pickup_Pickup_Country" name="Pickup_Pickup_Country"
                     placeholder="Postnummer">
             </div>
 
@@ -32,17 +32,17 @@
             <div class="col-md-2">
                 <label>Dato</label>
                 <br>
-                <input type="date" class="inputStyle" id="Pickup_date" name="Pickup_date">
+                <input type="date" class="inputStyleCreateOrder" id="Pickup_date" name="Pickup_date">
             </div>
             <div class="col-md-2">
                 <label>Fra tidspunkt</label>
                 <br>
-                <input type="time" class="inputStyle" id="Pickup_Start_Time" name="Pickup_Start_Time">
+                <input type="time" class="inputStyleCreateOrder" id="Pickup_Start_Time" name="Pickup_Start_Time">
             </div>
             <div class="col-md-2">
                 <label>Til tidspunkt</label>
                 <br>
-                <input type="time" class="inputStyle" id="Pickup_End_Time" name="Pickup_End_Time">
+                <input type="time" class="inputStyleCreateOrder" id="Pickup_End_Time" name="Pickup_End_Time">
             </div>
         </div>
         <div id="row3" class="row customRow ghostRow">
@@ -55,10 +55,10 @@
             <div class="col-md-6">
             </div>
             <div class="col-md-2">
-                <input type="text" class="inputStyle" id="Pickup_Company" name="Pickup_Company" placeholder="Firma">
+                <input type="text" class="inputStyleCreateOrder" id="Pickup_Company" name="Pickup_Company" placeholder="Firma">
             </div>
             <div class=col-md-2>
-                <input type="text" class="inputStyle" id="Pickup_Adress" name="Pickup_Adress" placeholder="Adresse">
+                <input type="text" class="inputStyleCreateOrder" id="Pickup_Adress" name="Pickup_Adress" placeholder="Adresse">
             </div>
             <div class=col-md-2>
                 <select id="Pickup_TransportTypeList">
@@ -68,7 +68,7 @@
                 </select>
             </div>
             <div class=col-md-2>
-                <input type="text" class="inputStyle" id="Pickup_Pickup_Country" name="Pickup_Pickup_Country"
+                <input type="text" class="inputStyleCreateOrder" id="Pickup_Pickup_Country" name="Pickup_Pickup_Country"
                     placeholder="Postnummer">
             </div>
 
@@ -77,17 +77,17 @@
             <div class="col-md-2">
                 <label>Dato</label>
                 <br>
-                <input type="date" class="inputStyle" id="Pickup_date" name="Pickup_date">
+                <input type="date" class="inputStyleCreateOrder" id="Pickup_date" name="Pickup_date">
             </div>
             <div class="col-md-2">
                 <label>Fra tidspunkt</label>
                 <br>
-                <input type="time" class="inputStyle" id="Pickup_Start_Time" name="Pickup_Start_Time">
+                <input type="time" class="inputStyleCreateOrder" id="Pickup_Start_Time" name="Pickup_Start_Time">
             </div>
             <div class="col-md-2">
                 <label>Til tidspunkt</label>
                 <br>
-                <input type="time" class="inputStyle" id="Pickup_End_Time" name="Pickup_End_Time">
+                <input type="time" class="inputStyleCreateOrder" id="Pickup_End_Time" name="Pickup_End_Time">
             </div>
         </div>
         <div id="row5" class="row customRow ghostRow">
@@ -95,26 +95,26 @@
                 <h5>Gods</label><br>
             </div>
             <div class="col-md-2">
-                <input type="text" class="inputStyle" id="Number_Paller" name="Number_Paller"
+                <input type="text" class="inputStyleCreateOrder" id="Number_Paller" name="Number_Paller"
                     placeholder="Antal paller">
             </div>
             <div class="col-md-2">
-                <input type="text" class="inputStyle" id="Size_paller" name="Size_Paller"
+                <input type="text" class="inputStyleCreateOrder" id="Size_paller" name="Size_Paller"
                     placeholder="Størrelse på paller">
             </div>
 
             <div class="col-md-2">
-                <input type="number" class="inputStyle" id="height_Paller" name="height_Paller"
+                <input type="number" class="inputStyleCreateOrder" id="height_Paller" name="height_Paller"
                     placeholder="Palles højde">
             </div>
 
             <div class="col-md-2">
-                <input type="number" class="inputStyle" id="length_Paller" name="length_Paller"
+                <input type="number" class="inputStyleCreateOrder" id="length_Paller" name="length_Paller"
                     placeholder="Palles højde">
             </div>
 
             <div class="col-md-2">
-                <input type="number" class="inputStyle" id="width_Paller" name="width_Paller"
+                <input type="number" class="inputStyleCreateOrder" id="width_Paller" name="width_Paller"
                     placeholder="Palles dybde">
             </div>
         </div>
@@ -125,21 +125,21 @@
             <div class="col-md-2">
                 <label>Dato</label>
                 <br>
-                <input type="date" class="inputStyle" id="Last_Offer_date" name="Last_Offer_date">
+                <input type="date" class="inputStyleCreateOrder" id="Last_Offer_date" name="Last_Offer_date">
             </div>
             <div class="col-md-2">
                 <label>Fra tidspunkt</label>
                 <br>
-                <input type="time" class="inputStyle" id="Last_Offer_Start_Time" name="Last_Offer_Start_Time">
+                <input type="time" class="inputStyleCreateOrder" id="Last_Offer_Start_Time" name="Last_Offer_Start_Time">
             </div>
             <div class="col-md-2">
                 <label>Til tidspunkt</label>
                 <br>
-                <input type="time" class="inputStyle" id="Last_Offer_End_Time" name="Last_Offer_End_Time">
+                <input type="time" class="inputStyleCreateOrder" id="Last_Offer_End_Time" name="Last_Offer_End_Time">
             </div>
             <div class="col-md-2">
                 <br>
-                <input type="text" class="inputStyle" id="Reference_Number" name="Reference_Number"
+                <input type="text" class="inputStyleCreateOrder" id="Reference_Number" name="Reference_Number"
                     placeholder="Reference nummer">
             </div>
         </div>
@@ -165,7 +165,7 @@
             </div>
             <div class="col-md-6">
                 <textarea name="coment" form="createOrder" rows="2" cols="50"
-                    class="inputStyle">Skriv en kommentar her</textarea>
+                    class="inputStyleCreateOrder">Skriv en kommentar her</textarea>
             </div>
 
         </div>
