--- a/views/modules/bid.ejs
+++ b/views/modules/bid.ejs
@@ -11,11 +11,11 @@
                 <form>
                     <div class="form-group">
                         <label for="bid-input" class="col-form-label">Pris:</label>
-                        <input type="text" class="form-control" id="bid-input">
+                        <input type="text" class="form-control" id="bid-input" placeholder="DKK">
                     </div>
                     <div class="form-group">
                         <label for="message-text" class="col-form-label">Kommentarer:</label>
-                        <textarea class="form-control" id="message-text"></textarea>
+                        <textarea class="form-control" id="message-text" placeholder="Information til fragt kunden..."></textarea>
                     </div>
                 </form>
             </div>
@@ -30,7 +30,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Bekræft buddet</h5>
+                <h5 class="modal-title">Bekræft bud til firma: ...</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -39,7 +39,7 @@
                 <p>Detaljer om buddet</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="customBtn" id="acceptBidBtn">Acceptér</button>
+                <button type="button" class="customBtn" id="acceptBidBtn">Bekræft</button>
                 <button type="button" class="customBtn" data-dismiss="modal">Afvis</button>
             </div>
         </div>
