Background og Hover

--- a/views/modules/createOrder.ejs
+++ b/views/modules/createOrder.ejs
@@ -1,3 +1,7 @@
+<div id="background">
+        <img src="userbtn.png">
+        </div>
+
 <div class="container marginTop">
     <form id="createOrder">
         <div id="row1" class="row customRow activeRow">
