--- a/views/modules/search.ejs
+++ b/views/modules/search.ejs
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <div class="container" id="container">
+
+        <div id="background">
+                <img src="truck.png">
+                </div>
         <!-- <% if (typeof successMessage != 'undefined' && successMessage) { %>
             <div class="alert alert-success">
                 <%- successMessage %>
