--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -196,3 +196,38 @@ html, body {
     height: 400px;
     background-color: grey;
   }
+
+thead tr        { 
+    height:60px;
+    background: #264A60;
+    font-size:16px;
+    border: black 1px solid;
+  }
+#resulttable{
+    width: 100%;
+    border-collapse: collapse;
+    border-style: groove;
+}
+#resulttable td{
+    padding: 7px; 
+    border: black 1px solid;
+}
+#resulttable tr {
+    background-color: whitesmoke;
+}f
+#resulttable tr:hover {
+    background-color: lightgray;
+}
+
+#background{
+    position:absolute;
+    z-index:0;
+    background:white;
+    display:block;
+    min-height:50%; 
+    min-width:50%;
+    opacity: 0.3;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%); 
+}
