--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -214,7 +214,7 @@ thead tr        {
 }
 #resulttable tr {
     background-color: whitesmoke;
-}f
+}
 #resulttable tr:hover {
     background-color: lightgray;
 }
