--- a/views/modules/search.ejs
+++ b/views/modules/search.ejs
@@ -2,10 +2,13 @@
 <html>
 <div class="container" id="container">
 
-        <div id="background">
+      
+        <!-- 
+              <div id="background">
                 <img src="truck.png">
                 </div>
-        <!-- <% if (typeof successMessage != 'undefined' && successMessage) { %>
+            
+            <% if (typeof successMessage != 'undefined' && successMessage) { %>
             <div class="alert alert-success">
                 <%- successMessage %>
             </div>
