--- a/views/modules/createOrder.ejs
+++ b/views/modules/createOrder.ejs
@@ -1,8 +1,6 @@
-<div id="background">
-        <img src="userbtn.png">
-        </div>
 
-<div class="container marginTop">
+
+<div class="container marginTop userbtnbackground">
     <form id="createOrder">
         <div id="row1" class="row customRow activeRow">
             <div class="col-md-4">
