--- a/views/modules/createOrder.ejs
+++ b/views/modules/createOrder.ejs
@@ -34,7 +34,7 @@
             <div class="col-md-2">
                 <label>Dato</label>
                 <br>
-                <input type="date" class="inputStyleCreateOrder" id="Pickup_date" name="Pickup_date">
+                <input type="date" class="inputStyleCreateOrder datepicker" id="Pickup_date" name="Pickup_date">
             </div>
             <div class="col-md-2">
                 <label>Fra tidspunkt</label>
@@ -79,7 +79,7 @@
             <div class="col-md-2">
                 <label>Dato</label>
                 <br>
-                <input type="date" class="inputStyleCreateOrder" id="Pickup_date" name="Pickup_date">
+                <input type="date" class="inputStyleCreateOrder datepicker" id="Pickup_date" name="Pickup_date">
             </div>
             <div class="col-md-2">
                 <label>Fra tidspunkt</label>
@@ -127,7 +127,7 @@
             <div class="col-md-2">
                 <label>Dato</label>
                 <br>
-                <input type="date" class="inputStyleCreateOrder" id="Last_Offer_date" name="Last_Offer_date">
+                <input type="date" class="inputStyleCreateOrder datepicker" id="Last_Offer_date" name="Last_Offer_date">
             </div>
             <div class="col-md-2">
                 <label>Fra tidspunkt</label>
