--- a/views/modules/login.ejs
+++ b/views/modules/login.ejs
@@ -1,4 +1,8 @@
-<div class="container centeredDiv loginDiv">
+<div  class="leftDiv column">
+  <!-- <button class="startpagebtn startpagebtn_user"> fff </button> -->
+  <img id="loginbackground" src="" class="background_login">
+</div>
+<div class="container rigthDiv loginDiv">
   <p></p>
   <h2>Login</h2>
   <p></p>
