background for serach and createorder

--- a/views/modules/search.ejs
+++ b/views/modules/search.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-
-<div class="container truckbackground" id="container">
+<div class="background_truck"> </div>
+<div class="container" id="container">
     <!--    
             <% if (typeof successMessage != 'undefined' && successMessage) { %>
             <div class="alert alert-success">
