--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -253,7 +253,7 @@ thead tr        {
     background-repeat: no-repeat;
     background-size: contain;
 } 
-.userbtnbackground {
+/* .userbtnbackground {
     z-index:0;
     background:white;
     display:block;
@@ -264,7 +264,7 @@ thead tr        {
     background-image: url("/userbtn_nt.png");
     background-position: center bottom;
     background-repeat: no-repeat;
-} 
+}  */
 
 
 .background_login{
@@ -272,4 +272,25 @@ thead tr        {
     max-width: 60%;
     margin-bottom: 15%;
     opacity: 0.5;
+}
+
+.background_truck{
+    z-index: -1;
+    opacity: 0.05;    
+    height: 100%;
+    width: 100%;
+    background-size: 10% 15%;
+    background-image: url("/truck_nt.png");
+    background-repeat: repeat;
+    position: absolute;
+}
+.background_user{
+    z-index: -1;
+    opacity: 0.05;    
+    height: 100%;
+    width: 100%;
+    background-size: 10% 15%;
+    background-image: url("/userbtn_nt.png");
+    background-repeat: repeat;
+    position: absolute;
 }
