--- a/views/modules/createOrder.ejs
+++ b/views/modules/createOrder.ejs
@@ -1,4 +1,6 @@
 
+    
+<div class="background_user"> </div>
 
 <div class="container marginTop userbtnbackground">
     <form id="createOrder">
@@ -34,7 +36,7 @@
             <div class="col-md-2">
                 <label>Dato</label>
                 <br>
-                <input type="date" class="inputStyleCreateOrder datepicker" id="Pickup_date" name="Pickup_date">
+                <input type="date" class="inputStyleCreateOrder " id="Pickup_date" name="Pickup_date">
             </div>
             <div class="col-md-2">
                 <label>Fra tidspunkt</label>
@@ -79,7 +81,7 @@
             <div class="col-md-2">
                 <label>Dato</label>
                 <br>
-                <input type="date" class="inputStyleCreateOrder datepicker" id="Pickup_date" name="Pickup_date">
+                <input type="date" class="inputStyleCreateOrder" id="Pickup_date" name="Pickup_date">
             </div>
             <div class="col-md-2">
                 <label>Fra tidspunkt</label>
@@ -127,7 +129,7 @@
             <div class="col-md-2">
                 <label>Dato</label>
                 <br>
-                <input type="date" class="inputStyleCreateOrder datepicker" id="Last_Offer_date" name="Last_Offer_date">
+                <input type="date" class="inputStyleCreateOrder" id="Last_Offer_date" name="Last_Offer_date">
             </div>
             <div class="col-md-2">
                 <label>Fra tidspunkt</label>
