--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -205,7 +205,7 @@ html, body {
 
 thead tr        { 
     height:60px;
-    background: #264A60;
+    background: lightgrey;
     font-size:16px;
     border: black 1px solid;
   }
@@ -220,6 +220,9 @@ thead tr        {
 }
 #resulttable tbody {
     background-color: whitesmoke;
+    border-style: solid;
+    border-color: black;
+    border-width: thick;
 }
 #resulttable thead {
     background-color: whitesmoke;
