--- a/views/modules/createOrder.ejs
+++ b/views/modules/createOrder.ejs
@@ -173,7 +173,11 @@
             </div>
 
         </div>
-        <input type="submit" value="Submit" class="customBtn">
+        <br>
+        <div class="col-md-4">
+                <input type="submit" value="Submit" class="customBtn">
+        </div>
+  
 
     </form>
 </div>
